--- a/gallery5.html
+++ b/gallery5.html
@@ -37,137 +37,30 @@
       <div id="carouselExampleControls" class="carousel slide col-10 " data-ride="carousel" >
         <div class="carousel-inner">
 
-
           <div class="carousel-item active">
-            <img class="d-block col-9" src="./picture/gallery/1.jpg">
-          </div>
-
-          <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/2.jpg">
-          </div>
-
-          <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/3.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/1.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/4.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/2.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/5.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/3.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/6.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/4.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/7.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/5.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/8.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/6.png">
           </div>
           <div class="carousel-item">
-            <img class="d-block col-9" src="./picture/gallery/9.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/7.png">
           </div>
-
           <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/10.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/11.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/12.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/13.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/14.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/15.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/16.jpg">
+            <img class="d-block col-9" src="./picture/built/craft/8.png">
           </div>
-        
-          <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/11.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/12.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/13.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/14.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/15.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/16.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/17.jpg">
-          </div>
-
-          <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/18.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/19.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/20.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/21.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/22.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/23.jpg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block col-9" src="./picture/gallery/24.jpg">
-            </div>
-  
-            <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/25.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/26.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/27.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/28.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/29.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/30.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/31.jpg">
-            </div>
-          
-            <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/32.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/33.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/34.jpg">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block col-9" src="./picture/gallery/35.jpg">
-              </div>
         </div>
 
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
