--- a/kitchen.html
+++ b/kitchen.html
@@ -66,7 +66,7 @@
             </span>
         </div>
         <div id="catalog" >
-            <img src="./picture/kitchen/catalogs.png" class="dark" alt="">
+            <img src="./picture/kitchen/catalogs.png" class="dark" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
         </div>
         <br>
         <div class="container bg-light">
